guiを開いている間のみ同期したいよね